Fixed som final layout issues

--- a/css/siteSpecific.css
+++ b/css/siteSpecific.css
@@ -11,7 +11,8 @@
 
 
 h1,
-h2{
+h2,
+h5.blockHeading{
     font-family:'League Gothic';
     font-weight: 400;
     letter-spacing: 0.04em;
